// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests Chain CajaCollection Tests banner cases should render banner dsk returned from getDynamicBanners 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        class="mod-banner --billboard_dsk billboard_dsk "
      >
        <div
          class="com-banner lazy"
          data-prebid-enabled="false"
          data-size="[]"
          data-sizemap="[]"
          data-subscription="false"
          data-without-hide="true"
          id="billboard_dsk"
        />
      </div>
      <div
        class="ln-roof --generic"
        roof-container="roof-container"
      >
        <div
          class="--ln-roof-full --d-flex --jc-between --pt-md"
        >
          <div
            class="--ln-roof-left"
          >
            <div
              class="--d-flex --ai-center --uppercase"
              roof-group="left"
            >
              <h3
                class="text ln-text --roof-title --prumo --font-xl-l"
              >
                Caja Collection
              </h3>
              
            </div>
          </div>
          <div
            class="--ln-roof-right --d-flex --ai-center --generico"
            roof-group="right"
          >
            
          </div>
        </div>
      </div>
      <section
        class="content-lab"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --3xl --regular --no-media"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            target="_self"
            title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
          >
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-3xl"
              >
                
                Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
              </h2>
              
            </section>
          </a>
        </article>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests banner cases should render banner mob returned from getDynamicBanners 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        class="ln-roof --generic"
        roof-container="roof-container"
      >
        <div
          class="--ln-roof-full --d-flex --jc-between --pt-md"
        >
          <div
            class="--ln-roof-left"
          >
            <div
              class="--d-flex --ai-center --uppercase"
              roof-group="left"
            >
              <h3
                class="text ln-text --roof-title --prumo --font-xl-l"
              >
                Caja Collection
              </h3>
              
            </div>
          </div>
          <div
            class="--ln-roof-right --d-flex --ai-center --generico"
            roof-group="right"
          >
            
          </div>
        </div>
      </div>
      <section
        class="content-lab"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start --3xl --regular --no-media"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            target="_self"
            title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
          >
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-3xl"
              >
                
                Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
              </h2>
              
            </section>
          </a>
        </article>
      </section>
      <div
        class="mod-banner --billboard_mob billboard_mob "
      >
        <div
          class="com-banner lazy"
          data-prebid-enabled="false"
          data-size="[]"
          data-sizemap="[]"
          data-subscription="false"
          data-without-hide="true"
          id="billboard_mob"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests banner cases should render banner subscriber when chain style is sub-exclusive 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fUjhrcHRHB8X"
    >
      <div
        class="mod-banner --billboard_dsk billboard_dsk "
      >
        <div
          class="com-banner lazy"
          data-prebid-enabled="false"
          data-size="[]"
          data-sizemap="[]"
          data-subscription="false"
          data-without-hide="true"
          id="billboard_dsk"
        />
      </div>
      <div
        class="ln-roof --sub-exclusive"
        roof-container="roof-container"
      >
        <div
          class="--ln-roof-full --d-flex --jc-between --pt-md"
        >
          <div
            class="--ln-roof-left"
          >
            <div
              class="--d-flex --ai-center --uppercase"
              roof-group="left"
            >
              <i
                class="icon --suscriptor-logo --icon-32"
              >
                <svg
                  fill="none"
                  viewBox="0 0 32 33"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#0D0D0D"
                    height="32"
                    rx="16"
                    width="32"
                    y="0.298"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12.706 12.13H8v.874h1.092v6.253H8v.874h6.878v-3.394H14v.503c0 .826-.268 1.314-.678 1.605-.423.3-1.025.412-1.732.412h-.088v-6.253h1.204v-.873Zm6.151 0h-3.419v.874h.357c.33 0 .663.271.663.682v4.964c0 .3-.08.435-.163.503-.092.075-.228.104-.408.104H15.4v.874h3.04v-.874h-.38a2.71 2.71 0 0 1-.413-.024.574.574 0 0 1-.23-.077c-.083-.056-.146-.16-.146-.45v-4.443l4.517 5.868h1.156v-6.717a.35.35 0 0 1 .125-.262c.09-.079.246-.148.496-.148H24v-.873h-3.046v.873h.497c.257 0 .427.048.529.121.09.066.144.163.144.323v2.912l-3.267-4.23Z"
                    fill="#FDB727"
                    fill-rule="evenodd"
                  />
                </svg>
              </i>
              <h3
                class="text ln-text --roof-title --prumo --font-xl-l"
              >
                Caja Collection
              </h3>
              
            </div>
          </div>
          <div
            class="--ln-roof-right --d-flex --ai-center --generico"
            roof-group="right"
          >
            
          </div>
        </div>
      </div>
      <script
        type="text/javascript"
      >
        
                     window.addEventListener('DOMContentLoaded', () =&gt; {
                        const parts = document.cookie.split("; ProductoPremiumId=");
                        const productsPremium = parts.length === 2
                            ? parts.pop().split(';').shift()
                            : '';  
                            if(productsPremium && productsPremium.includes("2")){
                                const button = document.querySelector(
                                    'a.--roof-button.--subscribe'
                                );
                                button && button.classList.add('--none');
                            }      
                     })
                 
      </script>
      <section
        class="content-lab"
      >
        <article
          class="ln-card --d-flex --flex-col --ai-start  --tab-text-center --3xl --regular --no-media"
        >
          <a
            class="link ln-link --d-flex --flex-col --unstyled"
            href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            target="_self"
            title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
          >
            <section
              class="description-container --relative --d-flex --flex-col"
              href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
            >
              <h2
                class="text ln-text title --prumo --font-medium --font-3xl"
              >
                
                Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
              </h2>
              
            </section>
          </a>
        </article>
      </section>
      <div
        class="banner-subscriber"
      >
        <div
          class="mod-banner --cajasuscriptores_dsk  "
        >
          <div
            class="com-banner lazy"
            data-prebid-enabled="false"
            data-size="[]"
            data-sizemap="[]"
            data-subscription="false"
            data-without-hide="false"
            id="cajasuscriptores_dsk"
          />
        </div>
        <div
          class="mod-banner --cajasuscriptores_mob  "
        >
          <div
            class="com-banner lazy"
            data-prebid-enabled="false"
            data-size="[]"
            data-sizemap="[]"
            data-subscription="false"
            data-without-hide="false"
            id="cajasuscriptores_mob"
          />
        </div>
        <div
          class="mod-banner --cajasuscriptores_tab  "
        >
          <div
            class="com-banner lazy"
            data-prebid-enabled="false"
            data-size="[]"
            data-sizemap="[]"
            data-subscription="false"
            data-without-hide="false"
            id="cajasuscriptores_tab"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return five articles with layout bn_1_4_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --bn_1_4_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --3xl --regular --no-media --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-3xl"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m-l --regular"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m-l"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Carlos Pagni"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Carlos Pagni
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Celina Chatruc"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Celina Chatruc
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                target="_self"
                title="Bullrich visita El Calafate y presenta libro"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Bullrich visita El Calafate y presenta libro
                  </h2>
                  <h3
                    class="text ln-text subhead --font-s"
                  >
                    Incidentes frente al hotel donde convocó a militantes 
                  </h3>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Mariela Arias"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Mariela Arias
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return five articles with layout bn_2_1_2_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --bn_2_1_2_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --xl --regular --no-media"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-xl"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Carlos Pagni"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Carlos Pagni
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-none --desktop-img-none"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Celina Chatruc"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Celina Chatruc
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                target="_self"
                title="Bullrich visita El Calafate y presenta libro"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Bullrich visita El Calafate y presenta libro
                  </h2>
                  <h3
                    class="text ln-text subhead --font-s"
                  >
                    Incidentes frente al hotel donde convocó a militantes 
                  </h3>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Mariela Arias"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Mariela Arias
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-right --tablet-img-none --desktop-img-none"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return four articles with layout bn_1_3_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --bn_1_3_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --3xl --regular --no-media"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-3xl"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Carlos Pagni"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Carlos Pagni
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --2 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Celina Chatruc"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Celina Chatruc
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --3 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-right --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                target="_self"
                title="Bullrich visita El Calafate y presenta libro"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Bullrich visita El Calafate y presenta libro
                  </h2>
                  <h3
                    class="text ln-text subhead --font-s"
                  >
                    Incidentes frente al hotel donde convocó a militantes 
                  </h3>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Mariela Arias"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Mariela Arias
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return seven articles with layout hash-1-2-2-2_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --hash-1-2-2-2_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --2 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --3 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --no-media --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                target="_self"
                title="Bullrich visita El Calafate y presenta libro"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/bullrich-visita-el-calafate-y-presenta-libro-nid11032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Bullrich visita El Calafate y presenta libro
                  </h2>
                  <h3
                    class="text ln-text subhead --font-s"
                  >
                    Incidentes frente al hotel donde convocó a militantes 
                  </h3>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --4 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --no-media --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --5 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --6 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --tab-text-center --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return three articles with layout bn_1_2_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --bn_1_2_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-12 --col-lg-12 --col-xl-12"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --3xl --regular --no-media --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-3xl"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Carlos Pagni"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Carlos Pagni
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --2 --col-8 --col-md-6 --col-lg-6 --col-xl-6"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                target="_self"
                title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
              >
                <section
                  class="media-container"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                  title="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg"
                      srcset="https://resizer.glanacion.com/resizer/zjnDs0_VUIbr4qr58x4IZg9O-Qw=/360x240/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 360w, https://resizer.glanacion.com/resizer/n5lSSh3ckD4EkPD89wVn3kUNQ84=/768x512/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 768w, https://resizer.glanacion.com/resizer/yZD_ef4PuFuOAAyIO06CzT0PaqA=/351x234/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/FBBNRZSHRVGLTJP5RPBUMIS7YY.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/deportes/futbol/boca-juniors/boca-claypole-en-lanus-el-favorito-gano-luego-de-sufrir-en-los-32os-de-final-de-la-copa-argentina-nid16032021/"
                >
                  <span
                    class="badge ln-badge --font-2xs --live"
                  >
                    <div
                      class="live-animation"
                    >
                      <div
                        class="circle"
                      />
                      <div
                        class="ringring"
                      />
                    </div>
                    vivo
                  </span>
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Boca - Claypole: en Lanús, el favorito ganó luego de sufrir, en los 32os de final de la Copa Argentina
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Celina Chatruc"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Celina Chatruc
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;

exports[`Tests Chain CajaCollection Tests cases for focal layouts should return two articles with layout bn_1_1_grid 1`] = `
<div>
  <div
    class="hidden"
  >
    <section
      data-chain-id="c0fuuilRMMtV6pi"
    >
      <div
        style="margin-top: 10px; margin-bottom: 10px; width: 100%;"
      >
        <div
          class="mod-warning --warning"
        >
          <h2
            class="title"
          >
            Advertencia
          </h2>
          <p
            class="text"
          >
            El ID de la imagen del logo es incorrecto.
          </p>
        </div>
      </div>
      <section
        class="ln-bngrid --bn_1_1_grid --bienestar"
      >
        <div
          class="grid container-op-top --grid-cols-8 --grid-cols-md-12 --grid-cols-lg-12 --grid-cols-xl-12 --gap-sm --grid-ai-stretch"
        >
          <div
            class="grid-item --0 --col-8 --col-md-9 --col-lg-9 --col-xl-9"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --2xl --regular --no-media --tablet-img-right --desktop-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                target="_self"
                title="Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra"
              >
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/sociedad/comunidad/elefante-azul-la-tragica-historia-detras-del-imponente-edificio-abandonado-en-saavedra-nid22042021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-2xl"
                  >
                    
                    Elefante Azul: la trágica historia detrás del imponente edificio abandonado en Saavedra
                  </h2>
                  
                </section>
              </a>
            </article>
          </div>
          <div
            class="grid-item --1 --col-8 --col-md-3 --col-lg-3 --col-xl-3"
          >
            <article
              class="ln-card --d-flex --flex-col --ai-start --m --regular --mobile-img-right"
            >
              <a
                class="link ln-link --d-flex --flex-col --unstyled"
                href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                target="_self"
                title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
              >
                <section
                  class="media-container"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                  title="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                >
                  <picture
                    class="ln-placeholder --d-flex --jc-center --ai-center --relative --ar-picture"
                  >
                    <img
                      alt="Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial"
                      class="image --d-flex --w-100 --h-100"
                      decoding="async"
                      fetchpriority="low"
                      height="513"
                      loading="lazy"
                      src="https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg"
                      srcset="https://resizer.glanacion.com/resizer/49bGzm_PlvwkFdq_mPUWYPu1Ll4=/360x240/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 360w, https://resizer.glanacion.com/resizer/F_QTa-zf0qUhummZ_iSXQg5DJ8M=/768x512/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 768w, https://resizer.glanacion.com/resizer/vI9F3VNVuHph7r0iT_GuISwhq0s=/351x234/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/IRC57MQ7QVGRVJCGMT2TRIXGYM.jpg 351w, "
                      width="768"
                    />
                  </picture>
                </section>
                <section
                  class="description-container --relative --d-flex --flex-col"
                  href="/politica/coronavirus-la-sorpresa-negativa-que-suma-incertidumbre-al-escenario-mundial-nid16032021/"
                >
                  <h2
                    class="text ln-text title --prumo --font-medium --font-m"
                  >
                    
                    Coronavirus, la sorpresa negativa que suma incertidumbre al escenario mundial
                  </h2>
                  <div
                    class="marquee-container --d-flex --ai-center"
                    title="Por Carlos Pagni"
                  >
                    <div
                      class="marquee-text --d-flex --flex-col --font-2xs"
                    >
                      <span
                        class="text ln-text marquee"
                      >
                        Por 
                        <strong>
                          Carlos Pagni
                        </strong>
                      </span>
                    </div>
                  </div>
                </section>
              </a>
            </article>
          </div>
        </div>
      </section>
    </section>
  </div>
</div>
`;
